XmlGenDom: modernize some methods and remove unnecessary
Change-Id: I7433fbfa4953a8edc065fde8bd2a703d57b5b963